<resources>
    <string name="title_action_search">search</string>
    <string name="title_action_view_search">" "</string>
    <string name="text_chip_filter_all">All</string>
    <string name="text_chip_filter_images">Images</string>
    <string name="text_chip_filter_videos">Videos</string>
    <string name="text_chip_filter_audio">Audio</string>
    <string name="text_chip_filter_download">Download</string>
    <string name="search_hint">Search files</string>
    <string name="error_feature">Feature Error</string>
    <string name="action_done">done</string>
    <string name="title_open_file">Open file</string>
    <string name="title_app_chooser">Open file</string>
    <string name="title_action_detail">File Detail</string>
    <string name="title_action_share">Share file</string>
    <string name="title_action_open">Open file</string>
    <string name="file_detail">Name: %1$s\n\nPath: %2$s\n\nSize: %3$s</string>
    <string name="title_dialog_file_detail">File detail</string>
    <string name="button_dialog_positive">OK</string>
    <string name="title_action_nav_search">Search</string>
    <string name="title_app_name">FilesViewer</string>
    <string name="title_dialog_exit_app">Exit app</string>
    <string name="message_dialog_exit_app">Are you sure you want to exit app?</string>
    <string name="button_dialog_negative">CANCEL</string>
    <string name="path_root_device_home">/Home</string>
    <string name="path_root_device_downloads">/Home/Download</string>
    <string name="path_root_device_videos">/Video</string>
    <string name="path_root_device_images">/Image</string>
    <string name="path_root_device_audios">/Audio</string>
    <string name="error_message_dir_non_exist">The directory in this location has been moved or deleted!</string>
    <string name="error_message_access_denied">Access to this directory has been restricted by android</string>
    <string name="error_message_browser_feature">Browser feature error! our team will fix it soon!</string>
    <string name="title_dialog_error">File Error</string>
    <string name="title_action_nav_settings">Settings</string>
</resources>